# aic2

./: main.py  pyproject.toml  schemas.py
routers/: gemini.py  grok.py  ollama.py
